; ModuleID = '/home/carl/AnghaBench/RetroArch/ctr/extr_gpu_old.c_GPU_DrawElements.c'
source_filename = "/home/carl/AnghaBench/RetroArch/ctr/extr_gpu_old.c_GPU_DrawElements.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GPUREG_PRIMITIVE_CONFIG = common dso_local global i32 0, align 4
@GPUREG_RESTART_PRIMITIVE = common dso_local global i32 0, align 4
@GPUREG_INDEXBUFFER_CONFIG = common dso_local global i32 0, align 4
@GPUREG_NUMVERTICES = common dso_local global i32 0, align 4
@GPUREG_VERTEX_OFFSET = common dso_local global i32 0, align 4
@GPUREG_GEOSTAGE_CONFIG = common dso_local global i32 0, align 4
@GPUREG_GEOSTAGE_CONFIG2 = common dso_local global i32 0, align 4
@GPUREG_START_DRAW_FUNC0 = common dso_local global i32 0, align 4
@GPUREG_DRAWELEMENTS = common dso_local global i32 0, align 4
@GPUREG_VTX_FUNC = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @GPU_DrawElements(i32 %0, i32* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32* %1, i32** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* @GPUREG_PRIMITIVE_CONFIG, align 4
  %8 = load i32, i32* %4, align 4
  %9 = call i32 @GPUCMD_AddMaskedWrite(i32 %7, i32 2, i32 %8)
  %10 = load i32, i32* @GPUREG_RESTART_PRIMITIVE, align 4
  %11 = call i32 @GPUCMD_AddMaskedWrite(i32 %10, i32 2, i32 1)
  %12 = load i32, i32* @GPUREG_INDEXBUFFER_CONFIG, align 4
  %13 = load i32*, i32** %5, align 8
  %14 = ptrtoint i32* %13 to i32
  %15 = or i32 -2147483648, %14
  %16 = call i32 @GPUCMD_AddWrite(i32 %12, i32 %15)
  %17 = load i32, i32* @GPUREG_NUMVERTICES, align 4
  %18 = load i32, i32* %6, align 4
  %19 = call i32 @GPUCMD_AddWrite(i32 %17, i32 %18)
  %20 = load i32, i32* @GPUREG_VERTEX_OFFSET, align 4
  %21 = call i32 @GPUCMD_AddWrite(i32 %20, i32 0)
  %22 = load i32, i32* @GPUREG_GEOSTAGE_CONFIG, align 4
  %23 = call i32 @GPUCMD_AddMaskedWrite(i32 %22, i32 2, i32 256)
  %24 = load i32, i32* @GPUREG_GEOSTAGE_CONFIG2, align 4
  %25 = call i32 @GPUCMD_AddMaskedWrite(i32 %24, i32 2, i32 256)
  %26 = load i32, i32* @GPUREG_START_DRAW_FUNC0, align 4
  %27 = call i32 @GPUCMD_AddMaskedWrite(i32 %26, i32 1, i32 0)
  %28 = load i32, i32* @GPUREG_DRAWELEMENTS, align 4
  %29 = call i32 @GPUCMD_AddWrite(i32 %28, i32 1)
  %30 = load i32, i32* @GPUREG_START_DRAW_FUNC0, align 4
  %31 = call i32 @GPUCMD_AddMaskedWrite(i32 %30, i32 1, i32 1)
  %32 = load i32, i32* @GPUREG_VTX_FUNC, align 4
  %33 = call i32 @GPUCMD_AddWrite(i32 %32, i32 1)
  ret void
}

declare dso_local i32 @GPUCMD_AddMaskedWrite(i32, i32, i32) #1

declare dso_local i32 @GPUCMD_AddWrite(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
